[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/interactive/interactive/offKeypad.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/onKeypad.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/Keypad.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.5, 85 )

[node name="Keypad" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="OnKeypad" type="Sprite" parent="Area2D"]
position = Vector2( 45, -10 )
texture = ExtResource( 2 )

[node name="OffKeypad" type="Sprite" parent="Area2D"]
position = Vector2( 45, -10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 45, 30 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
